# mini_nnet

./: AllCombined_one.h  CMakeLists.txt  README.md  autograd.cpp  autograd.h  gpt.cpp  gpt.h  main.cpp  matrix.cpp  matrix.h  mem_usage.cpp  mem_usage.h  network.cpp  network.h  utils.cpp  utils.h
